fix: relative image paths to make ’em work on GitHub Pages

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,5 @@
 <div class="welcome container">
-  <img src="/assets/images/low-profile-dog.png" alt="" />
+  <img src="assets/images/low-profile-dog.png" alt="" />
   <h1>Welcome to Hoodie Camp!</h1>
   <p>
     We created this place to <a href="http://hood.ie/blog/welcoming-communities">welcome new and existing Hoodie contributors</a> and to help maintainers keep an overview.
@@ -28,7 +28,7 @@
 <div class="teams container">
   <div class="code">
     <header>
-      {{#link-to "team" "code"}}<img src="/assets/images/dev-beaver.png" alt="" />{{/link-to}}
+      {{#link-to "team" "code"}}<img src="assets/images/dev-beaver.png" alt="" />{{/link-to}}
       <h2>{{#link-to "team" "code"}}Code team{{/link-to}}</h2>
 
       <p>
@@ -46,7 +46,7 @@
   </div>
   <div class="design">
     <header>
-      {{#link-to "team" "code"}}<img src="/assets/images/design-alpaca.png" alt="" />{{/link-to}}
+      {{#link-to "team" "code"}}<img src="assets/images/design-alpaca.png" alt="" />{{/link-to}}
       <h2>{{#link-to "team" "code"}}Design team{{/link-to}}</h2>
 
       <p>
@@ -64,7 +64,7 @@
   </div>
   <div class="docs">
     <header>
-      {{#link-to "team" "code"}}<img src="/assets/images/docs-chicken.png" alt="" />{{/link-to}}
+      {{#link-to "team" "code"}}<img src="assets/images/docs-chicken.png" alt="" />{{/link-to}}
       <h2>{{#link-to "team" "code"}}Docs team{{/link-to}}</h2>
 
       <p>
@@ -82,7 +82,7 @@
   </div>
   <div class="editorial">
     <header>
-      {{#link-to "team" "code"}}<img src="/assets/images/blog-bear.png" alt="" />{{/link-to}}
+      {{#link-to "team" "code"}}<img src="assets/images/blog-bear.png" alt="" />{{/link-to}}
       <h2>{{#link-to "team" "code"}}Editorial team{{/link-to}}</h2>
 
       <p>
