feat: show edit link on help pages

--- a/app/templates/help.hbs
+++ b/app/templates/help.hbs
@@ -7,4 +7,10 @@
   <p>
     {{markdown-render model.content}}
   </p>
+
+  <hr>
+
+  <p>
+    <a href="{{model.url}}">Edit this page in the Camp Wiki</a>
+  </p>
 </div>
