--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -1,9 +1,13 @@
 .app-footer {
-  margin: 2rem 0 0;
+  margin: 2rem 0;
   padding: 0 .5rem;
 
-  border-top: 2px solid #444;
+  text-align: right;
   color: #444;
   font-size: .8em;
   line-height: 2rem;
+
+  min-height: 30rem;
+  background: 50% 100% url('images/camp.png') no-repeat;
+  background-size: contain;
 }
