--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,5 +5,5 @@
 </main>
 
 <footer class="app-footer">
-  {{copyright}}
+  {{copyright}} | <a href="https://github.com/gr2m/hoodie-camp">Edit this app on GitHub</a>
 </footer>
