--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,5 +5,10 @@
 </main>
 
 <footer class="app-footer">
-  {{copyright}} | <a href="https://github.com/gr2m/hoodie-camp">Edit this app on GitHub</a>
+  <div class="container">
+    <small>
+      {{copyright}} | <a href="https://github.com/gr2m/hoodie-camp">Edit this app on GitHub</a>
+    </small>
+    <img src="assets/images/camp.png" alt="" />
+  </div>
 </footer>
