chore(typo): Fix typo in docs chicken blurb (#1)
Also add an "I" that helps the sentence flow a bit better :)

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -68,7 +68,7 @@
       <h2>{{#link-to "team" "code"}}Docs team{{/link-to}}</h2>
 
       <p>
-        Docs docs docs! I’m the Docs Chickend and make sure that all our code is well documented.
+        Docs docs docs! I’m the Docs Chicken and I make sure that all our code is well documented.
       </p>
     </header>
 
