fix: set lang attribute where appropriate (#2)
In certain assistive technologies (like screenreaders) if we set the lang attribute
they'll have a better idea of how to pronounce or display the content

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -50,7 +50,8 @@
       <h2>{{#link-to "team" "code"}}Design team{{/link-to}}</h2>
 
       <p>
-        ¿Qué tal? I’m the Design Alpaca. I care about accessability and ease of use of our websites and apps.
+        <span lang="es">¿Qué tal?</span>
+        I’m the Design Alpaca. I care about accessability and ease of use of our websites and apps.
       </p>
     </header>
 
@@ -86,7 +87,8 @@
       <h2>{{#link-to "team" "code"}}Editorial team{{/link-to}}</h2>
 
       <p>
-        Salut! We have lots of good stories here at Hoodie, I love to share them!
+        <span lang="fr">Salut!</span>
+        We have lots of good stories here at Hoodie, I love to share them!
       </p>
     </header>
 
