fix: Moin! The dev beaver have some mad German engineering skills

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -39,7 +39,7 @@
             <h2>{{#link-to "team" "code"}}Code team{{/link-to}}</h2>
 
             <p>
-              Hey there, I’m Charlie the Dev Beaver.<br>
+              Moin! I’m Charlie the Dev Beaver.<br>
               I love clean code and a great developer experience.
             </p>
           </div>
