feat: custom team pages

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,6 +6,7 @@ $firstTimersOnly: #552133 !default;
 @import 'footer';
 @import 'index';
 @import 'issues';
+@import 'teams';
 
 * {
   box-sizing: border-box;
