--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -36,7 +36,7 @@
             <img src="assets/images/dev-beaver.png" alt="" />
           </div>
           <div class="team-body">
-            <h2>{{#link-to "team" "code"}}Code team{{/link-to}}</h2>
+            <h2>{{#link-to "teams" "code"}}Code team{{/link-to}}</h2>
 
             <p>
               Moin! I’m Charlie the Dev Beaver.<br>
@@ -64,7 +64,7 @@
             <img src="assets/images/design-alpaca.png" alt="" />
           </div>
           <div class="team-body">
-            <h2>{{#link-to "team" "code"}}Design team{{/link-to}}</h2>
+            <h2>{{#link-to "teams" "design"}}Design team{{/link-to}}</h2>
 
             <p>
               <span lang="es">¿Qué tal?</span>
@@ -94,7 +94,7 @@
             <img src="assets/images/docs-chicken.png" alt="" />
           </div>
           <div class="team-body">
-            <h2>{{#link-to "team" "code"}}Docs team{{/link-to}}</h2>
+            <h2>{{#link-to "teams" "documentation"}}Docs team{{/link-to}}</h2>
             <p>
               Docs docs docs! I’m the Docs Chicken and I make sure that all our code is well documented.
             </p>
@@ -120,7 +120,7 @@
             <img src="assets/images/blog-bear.png" alt="" />
           </div>
           <div class="team-body">
-            <h2>{{#link-to "team" "code"}}Editorial team{{/link-to}}</h2>
+            <h2>{{#link-to "teams" "editorial"}}Editorial team{{/link-to}}</h2>
 
             <p>
               <span lang="fr">Salut!</span>
